Add Surface Reference Debug Label Unit Test

Added a automated test for FrameSink debug labels. The test sets up a surface
reference with a label. It gets the surface references string from
SurfaceManager and checks that the label is in the string. It then invalidate
the FrameSinkLabel that has the label and makes sure the label no longer exists
in the surface references string afterwards.

Bug: 765606
Change-Id: Ica18de18803dd6cf86ddcb18c863124c427bdd98